welcome.lessons.welcome.loopdowhile.Poucet1.scala.error
Poucet:5: error: ';' expected but ')' found.
    nbBscuits = nbBiscuits + 1)
                              ^Poucet:6: error: '}' expected but 'case' found.
  }case nbBiscuits >= 3 => gauche();
   ^Poucet:7: error: 'while' expected but 'case' found.
   case nbBiscuits <= 2 => droite();
   ^Poucet:7: error: '(' expected but ';' found.
   case nbBiscuits <= 2 => droite();
                                   ^Poucet:8: error: ';' expected but 'while' found.
  } while (sortieTrouvee)
    ^Poucet:12: error: eof expected but '}' found.
}
^